--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,9 @@ body {
 }
 
 img {
-    max-width: 20%;
-    height: 50;
-    width: 50;
+    max-width: 100%;
+    height: auto;
+    width: auto;
 }
 
 a {
