--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    padding: 1rem;
     text-align: center;
 }
 
@@ -11,6 +10,7 @@ body {
     line-height: 1.4;
     color: darkblue;
     background-color: whitesmoke;
+    text-align: center;
 }
 
 img {
