--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    text-align: center;
 }
 
 body {
@@ -28,6 +27,11 @@ a:hover {
     color: darkmagenta;
 }
 
+.header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
 
 .name-title p {
     font-size: 1rem;
