--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
+    margin-right: 20px;
     padding: 0;
     background-color: #f4f4f4;
     color: #333;
