--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,10 @@ img {
     margin-bottom: 30px;
 }
 
+.navigation {
+    margin-bottom: 30px;
+}
+
 h2 {
     font-size: 1.5rem;
     color: #444;
@@ -53,5 +57,5 @@ ul li {
 }
 
 .footer p {
-    margin: 5px 0;
+    margin: 30px 0;
 }
